OOP: completed small assignment