@@ -9,8 +9,8 @@ public class Main {
     public static void main(String[] args) {
         ParkingLot parkingLot = new ParkingLot();
 
-        ParkingSpot spot1 = new ParkingSpot(ParkingSpotSize.SMALL, 10);
-        ParkingSpot spot2 = new ParkingSpot(ParkingSpotSize.MEDIUM, 15);
+        ParkingSpot spot1 = new ParkingSpot(ParkingSpotSize.COMPACT, 10);
+        ParkingSpot spot2 = new ParkingSpot(ParkingSpotSize.STANDARD, 15);
         ParkingSpot spot3 = new ParkingSpot(ParkingSpotSize.LARGE, 20);
 
         parkingLot.registerSpot(spot1);
@@ -21,7 +21,7 @@ public class Main {
         parkingLot.getAllAvailableSpots().forEach(spot -> System.out.println(spot.getSize()));
 
         System.out.println("Filter spots by size and hourly rate: ");
-        parkingLot.filterParkingSpot(ParkingSpotSize.SMALL, 10).forEach(spot -> System.out.println(spot.getSize()));
+        parkingLot.filterParkingSpot(ParkingSpotSize.COMPACT, 10).forEach(spot -> System.out.println(spot.getSize()));
 
         parkingLot.parkCar(spot1, 2);
         parkingLot.parkCar(spot2, 3);
@@ -33,7 +33,9 @@ public class Main {
         parkingLot.getReservations().forEach(reservation -> System.out.println(reservation.getSpot().getSize()));
 
         System.out.println("Remove car from spot 1");
-        parkingLot.removeCar(parkingLot.getReservations().get(0));
+        double cost = parkingLot.removeCar(parkingLot.getReservations().getFirst());
+
+        System.out.println("Cost: " + cost);
 
         System.out.println("All available spots: ");
         parkingLot.getAllAvailableSpots().forEach(spot -> System.out.println(spot.getSize()));
